Improve transaction filters
